src/components/container/container.scss
@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
@import url('https://fonts.googleapis.com/css?family=Open+Sans');

html, body, #root, #container {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  height: 100%;
  font-family: "Open Sans", sans-serif;
}

*, *:before, *:after {
  box-sizing: inherit;
}

h1, h2, h3 { 
  font-family: "Roboto Slab", serif;
}

#filters-menu-icon {
  position: absolute;
  left: 18px;
  top: 9px;
  font-size: 47px;
  margin-top: 10px;
  
  @media screen and (min-width: 1280px) {
    & {
      display: none;
    }
  }
}

#filters-menu-wrapper {
  float: left;
  padding-left: 20px;
  height: 100%;
  width: 19%;
  border-right: 2px solid #BABFD1;

  & > div {
    padding-right: 12px;
  }

  @media screen and (max-width: 1280px) {
    & {
      padding-top: 109px;
    }

    &.closed-sidebar {
      display: none;
    }
  }
}

#main-content {
  display: inline-block;
  padding-top: 9px;
  height: 100%;
  width: 81%;

  @media screen and (max-width: 1280px) {
    &.closed-sidebar{
      width: 100%;
    }
  }
}

#groups-wrapper {
  border-bottom: 2px solid #BABFD1;
  height: 100px;

  @media screen and (max-width: 1280px) {
      & {
        height: 6%;
      }
    }
}

#movies-wrapper {
  height: 80%;
  overflow: scroll;
}

